# rrr

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile.toml  makefile.toml  readme.markdown  renovate.json
.github/workflows/: check.yml  ci.yml  pr.yml
crates/core_config/: Cargo.toml
crates/core_config/src/: lib.rs
crates/rrr_audio/: Cargo.toml
crates/rrr_audio/src/: player.rs
crates/rrr_bench/: Cargo.toml
crates/rrr_bench/src/: lib.rs
crates/rrr_chart/: Cargo.toml
crates/rrr_chart/src/: chart_impl.rs  lib.rs  note.rs
crates/rrr_chart/src/parser/: mod.rs  swf.rs
crates/rrr_chart/src/parser/test_assets/: test_2.swf  test_3.swf  test_4.swf  test_4_block.swf
crates/rrr_config/: Cargo.toml
crates/rrr_config/src/: lib.rs
crates/rrr_core/: Cargo.toml
crates/rrr_core/src/: actions.rs  judge.rs  lib.rs  turntable.rs
crates/rrr_data/: Cargo.toml
crates/rrr_data/src/: lib.rs
crates/rrr_data/src/imp/: mod.rs
crates/rrr_data/src/imp/platform/: wasm.rs
crates/rrr_fetch/: Cargo.toml  makefile.toml  readme.markdown
crates/rrr_fetch/src/: lib.rs
crates/rrr_fetch/src/fetch/: mod.rs
crates/rrr_fetch/src/fetch/imp/: mod.rs
crates/rrr_fetch/src/fetch/imp/platform/: native.rs  wasm.rs
crates/rrr_game/: Cargo.toml
crates/rrr_game/src/: builder.rs  field.rs  hit_action.rs  lib.rs
crates/rrr_graphics/: Cargo.toml
crates/rrr_graphics/src/: lib.rs  sprites.rs
crates/rrr_input/: Cargo.toml
crates/rrr_input/src/: lib.rs
crates/rrr_internal/: Cargo.toml
crates/rrr_math/: Cargo.toml
crates/rrr_math/src/: lerp.rs
crates/rrr_noteskin/: Cargo.toml
crates/rrr_noteskin/src/: lib.rs
crates/rrr_playlist/: Cargo.toml
crates/rrr_playlist/src/: lib.rs
crates/rrr_record/: Cargo.toml
crates/rrr_record/src/: lib.rs  record.rs
crates/rrr_render/: Cargo.toml
crates/rrr_render/src/: field.rs  lib.rs  sprites.rs
crates/rrr_settings/: Cargo.toml
crates/rrr_settings/src/: lib.rs
crates/rrr_settings_core/: Cargo.toml
crates/rrr_settings_core/src/: lib.rs
crates/rrr_time/: Cargo.toml  makefile.toml
crates/rrr_time/src/: lib.rs
crates/rrr_time/src/imp/platform/: native.rs  wasm.rs
crates/rrr_tui/: Cargo.toml
crates/rrr_tui/src/: lib.rs
crates/rrr_types/: Cargo.toml
crates/rrr_types/src/: lib.rs  receptor_position.rs
crates/rrr_wasm/: Cargo.toml  Makefile.toml  makefile.toml
crates/rrr_wasm/src/: benchmark_callback.rs  lib.rs
crates/rrr_wasm/web/: .gitignore  bench.html  bench.js  index.html  index.js  style.css
crates/rrr_wasm/workers/: fetch.rs
crates/rrr_window/: Cargo.toml
crates/rrr_window/src/: lib.rs
examples/native/: main.rs
src/: command.rs  completions.rs  main.rs
src/command/: completions.rs  play.rs  tui.rs
