[workspace]
members = ["crates/*"]

[package]
name = "rrr"
version = "0.2.0"
authors = ["Zageron <hello@zageron.ca>"]
description = "CLI interface for RRR."
homepage = "https://github.com/flashflashrevolution/rrr"
repository = "https://github.com/flashflashrevolution/rrr"
readme = "readme.markdown"
license = "AGPL-3.0"
edition = "2021"
publish = false
rust-version = "1.66.0"

[[bin]]
name = "rrr"
path = "src/main.rs"

[features]
default = ["tui", "window"]
tui = ["rrr_tui"]
window = ["rrr_window"]

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.11", features = ["derive"] }
clap_complete = "4.0.2"
futures = "0.3.24"
rrr_config = { path = "crates/rrr_config" }
rrr_game = { path = "crates/rrr_game" }
rrr_tui = { path = "crates/rrr_tui", optional = true }
rrr_window = { path = "crates/rrr_window", optional = true }

[profile.release]
opt-level = 3

[profile.dev.package.rrr_wasm]
opt-level = "s"

[profile.release.package.rrr_wasm]
opt-level = "s"
