[workspace]
members = ["crates/*"]

[package]
name = "rrr"
version = "0.2.0"
authors = ["Zageron <hello@zageron.ca>"]
description = "CLI interface for RRR."
homepage = "https://github.com/flashflashrevolution/rrr"
repository = "https://github.com/flashflashrevolution/rrr"
readme = "readme.markdown"
license = "AGPL-3.0"
edition = "2021"
publish = false
rust-version = "1.66.0"

[[bin]]
name = "rrr"
path = "src/main.rs"

[[example]]
name = "native"
test = true

[features]
default = ["tui", "window", "develop"]
develop = ["log/max_level_info", "log/release_max_level_info"]
release = ["tui", "window", "log/release_max_level_off", "rrr_game/release"]
tui = ["rrr_tui"]
window = ["rrr_window"]

[dependencies]
anyhow = "1.0"
log = "0.4"
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
futures = "0.3"
rrr_config = { path = "crates/rrr_config" }
rrr_fetch = { path = "crates/rrr_fetch" }
rrr_game = { path = "crates/rrr_game" }
rrr_record = { path = "crates/rrr_record" }
rrr_tui = { path = "crates/rrr_tui", optional = true }
rrr_window = { path = "crates/rrr_window", optional = true }
simple_logger = "5.0"

[profile.release]
opt-level = 3

[profile.dev.package.rrr_wasm]
opt-level = "s"

[profile.release.package.rrr_wasm]
opt-level = "s"
