[package]
name = "rrr_audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
dasp = { git = "https://github.com/RustAudio/dasp", rev = "6b15274b471835e586089e54228e54601f92d391", features = [
    "interpolate",
    "interpolate-linear",
    "signal",
] }
log = "0.4.17"
rb = "0.4.1"
symphonia = { version = "0.5.1", default-features = false, features = ["mp3"] }

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
cpal = { git = "https://github.com/RustAudio/cpal.git" }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
console_error_panic_hook = "0.1.7"
cpal = { git = "https://github.com/RustAudio/cpal.git", features = [
    "wasm-bindgen",
] }
