[package]
name = "rrr_chart"
description = "Chart processor for RRR."
version = "0.1.0"
authors = ["Zageron <hello@zageron.ca>"]
homepage = "https://github.com/flashflashrevolution/rrr"
repository = "https://github.com/flashflashrevolution/rrr"
license = "AGPL-3.0"
edition = "2021"
publish = false
rust-version = "1.66.0"

[features]
default = ["swf"]
bin = []
swf = ["dep:swf"]
sm = []


[dependencies]
anyhow = "1.0.82"
log = "0.4"
rrr_types = { path = "../rrr_types" }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
swf = { version = "0.2", optional = true }
thiserror = "1.0"


[dev-dependencies]
simple_logger = "5.0"
