[package]
name = "rrr_core"
description = "Core gameplay processor for RRR."
version = "0.1.0"
authors = ["Zageron <hello@zageron.ca>"]
homepage = "https://github.com/flashflashrevolution/rrr"
repository = "https://github.com/flashflashrevolution/rrr"
license = "AGPL-3.0"
edition = "2021"
publish = false
rust-version = "1.66.0"

[dependencies]
anyhow = "1.0.82"
btreemultimap = "0.1.1"
log = "0.4.21"
rrr_audio = { path = "../rrr_audio" }
rrr_chart = { path = "../rrr_chart" }
rrr_record = { path = "../rrr_record" }
rrr_settings_core = { path = "../rrr_settings_core" }

[dev-dependencies]
rrr_math = { path = "../rrr_math" }
