[package]
name = "rrr_data"
description = "Library for reading and writing RRR data."
version = "0.1.0"
authors = ["Zageron <hello@zageron.ca>"]
homepage = "https://github.com/flashflashrevolution/rrr"
repository = "https://github.com/flashflashrevolution/rrr"
license = "AGPL-3.0"
edition = "2021"
publish = false
rust-version = "1.66.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dependencies.uuid]
version = "1.2"
features = ["v4", "fast-rng", "macro-diagnostics"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
app_dirs = { package = "app_dirs2", version = "2.5" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-storage = "0.2"
