[package]
name = "rrr_fetch"
description = "Platform agnostic fetching helpers."
version = "0.1.0"
authors = ["Zageron <hello@zageron.ca>"]
homepage = "https://github.com/flashflashrevolution/rrr"
repository = "https://github.com/flashflashrevolution/rrr"
license = "AGPL-3.0"
edition = "2021"
publish = false
rust-version = "1.66.0"

[dependencies]
anyhow = "1.0.65"
log = "0.4.17"
reqwest = { version = "0.11.12", features = ["json", "blocking", "stream"] }
serde = { version = "1.0.145", features = ["derive"] }
