[package]
name = "rrr_fetch"
description = "Platform agnostic fetching helpers."
version = "0.1.0"
authors = ["Zageron <hello@zageron.ca>"]
homepage = "https://github.com/flashflashrevolution/rrr"
repository = "https://github.com/flashflashrevolution/rrr"
license = "AGPL-3.0"
edition = "2021"
publish = false
rust-version = "1.66.0"

[dependencies]
anyhow = "1.0.82"
log = "0.4.21"
rrr_playlist = { path = "../rrr_playlist" }
rrr_types = { path = "../rrr_types" }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { version = "2.9" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures = { version = "0.3", features = ["thread-pool"] }
futures-util = "0.3"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-streams = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "HtmlCanvasElement",
    "Headers",
    "Response",
    "ReadableStream",
    "Window",
]

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
