[package]
name = "rrr_game"
description = "Composes the crates to produce the engine."
version = "0.1.0"
authors = ["Zageron <hello@zageron.ca>"]
homepage = "https://github.com/flashflashrevolution/rrr"
repository = "https://github.com/flashflashrevolution/rrr"
license = "AGPL-3.0"
edition = "2021"
publish = false
rust-version = "1.64.0"

[dependencies]
rrr_core = { path = "../rrr_core" }
rrr_input = { path = "../rrr_input" }
rrr_render = { path = "../rrr_render" }
rrr_settings = { path = "../rrr_settings" }
