[package]
name = "rrr_graphics"
description = "Graphics specific implementations."
version = "0.1.0"
authors = ["Zageron <hello@zageron.ca>"]
homepage = "https://github.com/flashflashrevolution/rrr"
repository = "https://github.com/flashflashrevolution/rrr"
license = "AGPL-3.0"
edition = "2021"
publish = false
rust-version = "1.66.0"

[dependencies]
image = { version = "0.25.1", default-features = false, features = ["png"] }
rrr_types = { path = "../rrr_types" }
