[package]
name = "rrr_input"
description = "Input handling."
version = "0.1.0"
authors = ["Zageron <hello@zageron.ca>"]
homepage = "https://github.com/flashflashrevolution/rrr"
repository = "https://github.com/flashflashrevolution/rrr"
license = "AGPL-3.0"
edition = "2021"
publish = false
rust-version = "1.64.0"

[dependencies]
serde = { version = "1.0.201", features = ["derive"] }
