[package]
name = "rrr_internal"
description = "Integration of core libraries."
version = "0.1.0"
authors = ["Zageron <hello@zageron.ca>"]
homepage = "https://github.com/flashflashrevolution/rrr"
repository = "https://github.com/flashflashrevolution/rrr"
license = "AGPL-3.0"
edition = "2021"
publish = false
rust-version = "1.66.0"

[dependencies]
rrr_playlist = { path = "../rrr_playlist" }
