[package]
name = "rrr_noteskin"
description = "Noteskin representation."
version = "0.1.0"
authors = ["Zageron <hello@zageron.ca>"]
homepage = "https://github.com/flashflashrevolution/rrr"
repository = "https://github.com/flashflashrevolution/rrr"
license = "AGPL-3.0"
edition = "2021"
publish = false
rust-version = "1.66.0"

[dependencies]
anyhow = "1.0.65"
image = { version = "0.24.4", default-features = false, features = ["png"] }
log = { version = "0.4.17" }
rrr_chart = { path = "../rrr_chart" }
rrr_render = { path = "../rrr_render" }
strum = { version = "0.24.1", features = ["derive"] }
