[package]
name = "rrr_noteskin"
description = "Noteskin representation."
version = "0.1.0"
authors = ["Zageron <hello@zageron.ca>"]
homepage = "https://github.com/flashflashrevolution/rrr"
repository = "https://github.com/flashflashrevolution/rrr"
license = "AGPL-3.0"
edition = "2021"
publish = false
rust-version = "1.66.0"

[dependencies]
anyhow = "1.0"
log = { version = "0.4" }
rrr_chart = { path = "../rrr_chart" }
rrr_graphics = { path = "../rrr_graphics" }
strum = { version = "0.24", features = ["derive"] }
