[package]
name = "rrr_record"
description = "Convert raw chart and music data to a record."
version = "0.1.0"
authors = ["Zageron <hello@zageron.ca>"]
homepage = "https://github.com/flashflashrevolution/rrr"
repository = "https://github.com/flashflashrevolution/rrr"
license = "AGPL-3.0"
edition = "2021"
publish = false
rust-version = "1.66.0"

[features]
default = ["swf"]
swf = ["rrr_chart/swf"]

[dependencies]
anyhow = "1.0.82"
btreemultimap = "0.1.1"
log = "0.4"
rrr_chart = { path = "../rrr_chart" }
