[package]
name = "rrr_render"
description = "Rendering"
version = "0.1.0"
authors = ["Zageron <hello@zageron.ca>"]
homepage = "https://github.com/flashflashrevolution/rrr"
repository = "https://github.com/flashflashrevolution/rrr"
license = "AGPL-3.0"
edition = "2021"
publish = false
rust-version = "1.66.0"

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = "1.0.65"
image = { version = "0.24.4", default-features = false, features = ["png"] }
pixels = { git = "https://github.com/parasyte/pixels.git", branch = "main" }
