[package]
name = "rrr_render"
description = "Rendering"
version = "0.1.0"
authors = ["Zageron <hello@zageron.ca>"]
homepage = "https://github.com/flashflashrevolution/rrr"
repository = "https://github.com/flashflashrevolution/rrr"
license = "AGPL-3.0"
edition = "2021"
publish = false
rust-version = "1.66.0"

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = "1.0"
pixels = "0.13"
rrr_chart = { path = "../rrr_chart" }
rrr_core = { path = "../rrr_core" }
rrr_graphics = { path = "../rrr_graphics" }
rrr_math = { path = "../rrr_math" }
rrr_noteskin = { path = "../rrr_noteskin" }
rrr_types = { path = "../rrr_types" }
