[package]
name = "rrr_settings_core"
description = "Settings for chart playback."
version = "0.1.0"
authors = ["Zageron <hello@zageron.ca>"]
homepage = "https://github.com/flashflashrevolution/rrr"
repository = "https://github.com/flashflashrevolution/rrr"
license = "AGPL-3.0"
edition = "2021"
publish = false
rust-version = "1.66.0"

[dependencies]
rrr_input = { path = "../rrr_input" }
rrr_types = { path = "../rrr_types" }
serde = { version = "1.0.147", features = ["derive"] }
