[package]
name = "rrr_tui"
description = "A terminal user interface."
version = "0.1.0"
authors = ["Zageron <hello@zageron.ca>"]
homepage = "https://github.com/flashflashrevolution/rrr"
repository = "https://github.com/flashflashrevolution/rrr"
license = "AGPL-3.0"
edition = "2021"
publish = false
rust-version = "1.66.0"

[dependencies]
crossterm = "0.25.0"
tui = "0.19.0"
unicode-width = "0.1"
rrr_config = { path = "../rrr_config" }
rrr_window = { path = "../rrr_window" }
