[package]
name = "rrr_tui"
description = "A terminal user interface."
version = "0.1.0"
authors = ["Zageron <hello@zageron.ca>"]
homepage = "https://github.com/flashflashrevolution/rrr"
repository = "https://github.com/flashflashrevolution/rrr"
license = "AGPL-3.0"
edition = "2021"
publish = false
rust-version = "1.66.0"

[dependencies]
anyhow = "1.0.65"
crossterm = "0.25.0"
futures = "0.3.25"
rrr_config = { path = "../rrr_config" }
rrr_game = { path = "../rrr_game" }
rrr_render = { path = "../rrr_render" }
rrr_window = { path = "../rrr_window" }
tui = "0.19.0"
unicode-width = "0.1"
