[package]
name = "rrr_wasm"
description = "Wasm library for rendering to a web canvas."
version = "0.1.0"
authors = ["Zageron <hello@zageron.ca>"]
homepage = "https://github.com/flashflashrevolution/rrr"
repository = "https://github.com/flashflashrevolution/rrr"
license = "AGPL-3.0"
edition = "2021"
publish = false
rust-version = "1.66.0"

[lib]
crate-type = ["cdylib"]

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
gloo-worker = "0.2.1"
log = "0.4.17"
pixels = { git = "https://github.com/parasyte/pixels.git", branch = "main" }
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = "0.3.60"
wgpu = { version = "0.13.1", features = ["webgl"] }
winit = "0.27.3"
winit_input_helper = "0.13.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[profile.release]
opt-level = "s"
