[package]
name = "rrr_wasm"
description = "Wasm library for rendering to a web canvas."
version = "0.1.0"
authors = ["Zageron <hello@zageron.ca>"]
homepage = "https://github.com/flashflashrevolution/rrr"
repository = "https://github.com/flashflashrevolution/rrr"
license = "AGPL-3.0"
edition = "2021"
publish = false
rust-version = "1.66.0"

[lib]
crate-type = ["cdylib"]

[features]
release = ["log/release_max_level_off"]
optimize = ["log/release_max_level_warn"]
develop = ["log/release_max_level_info"]
default = ["develop", "bench"]
bench = ["dep:rrr_bench"]

[dependencies]
anyhow = "1.0"
console_error_panic_hook = "0.1"
console_log = "1.0"
js-sys = "0.3"
log = "0.4"
pixels = "0.13"
rrr_bench = { path = "../rrr_bench", optional = true }
rrr_fetch = { path = "../rrr_fetch" }
rrr_game = { path = "../rrr_game" }
rrr_input = { path = "../rrr_input" }
rrr_record = { path = "../rrr_record" }
rrr_render = { path = "../rrr_render" }
rrr_time = { path = "../rrr_time" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wgpu = { version = "0.20", features = ["webgl"] }
winit = "0.28"
winit_input_helper = "0.16"

[dependencies.web-sys]
version = "0.3.69"
features = ["HtmlCanvasElement", "Response", "ReadableStream"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
