[package]
name = "rrr_window"
description = "Classical window rendering on native platforms."
version = "0.1.0"
authors = ["Zageron <hello@zageron.ca>"]
homepage = "https://github.com/flashflashrevolution/rrr"
repository = "https://github.com/flashflashrevolution/rrr"
license = "AGPL-3.0"
edition = "2021"
publish = false
rust-version = "1.66.0"

[dependencies]
rrr_config = { path = "../rrr_config" }
serde = { version = "1.0.145", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
winit = { version = "0.27.3", default-features = false, features = ['x11'] }

[target.'cfg(windows)'.dependencies]
winit = { version = "0.27.3", default-features = false }
