[package]
name = "rrr_window"
description = "Classical window rendering on native platforms."
version = "0.1.0"
authors = ["Zageron <hello@zageron.ca>"]
homepage = "https://github.com/flashflashrevolution/rrr"
repository = "https://github.com/flashflashrevolution/rrr"
license = "AGPL-3.0"
edition = "2021"
publish = false
rust-version = "1.66.0"

[features]
default = ["develop"]
develop = [
    "log/max_level_info",
    "log/release_max_level_info",
    "rrr_game/release",
]
release = ["log/release_max_level_off", "rrr_game/release"]

[dependencies]
anyhow = "1.0.82"
log = "0.4"
rrr_config = { path = "../rrr_config" }
rrr_game = { path = "../rrr_game" }
rrr_input = { path = "../rrr_input" }
rrr_time = { path = "../rrr_time" }
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
winit = { version = "0.28", default-features = false, features = ['x11'] }

[target.'cfg(windows)'.dependencies]
winit = { version = "0.28", default-features = false }
